--- a/src/styles.css
+++ b/src/styles.css
@@ -52,15 +52,15 @@ svg:hover path {
 .slideshow {
   height: 200px;
   width: 600px;
-  margin: 0 auto;
+  margin: 0;
   position: relative;
   overflow-x: hidden;
   transform: translate3d(0, 0, 0);
 }
 
 .slideshow > div {
+  display: flex;
   width: 2000px;
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/collage.jpg);
   position: absolute;
   top: 0;
   left: 0;
